--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+/dist
+
+/.cache
+/.github
+
 # Logs
 logs
 *.log
@@ -61,6 +66,7 @@ node_modules/
 
 # Yarn Integrity file
 .yarn-integrity
+.yarn.lock
 
 # dotenv environment variables file
 .env
