--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "build": "parcel build ./src/index.html --no-source-maps"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.32.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "handlebars": "^4.7.6"
   }
 }
